--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ genmc
 trust
 verify_test_benchmarks/**/target-ir/
 verify_test_benchmarks/**/target/
-test_results/
-test_traces/
+test_results/**/.txt
+test_traces/**/.txt
