--- a/Makefile.in
+++ b/Makefile.in
@@ -767,7 +767,7 @@ libgenmc_a_SOURCES = \
   src/VSet.hpp src/VSet.tcc
 
 TESTS = scripts/fast-driver.sh scripts/randomize-driver.sh
-AM_CXXFLAGS = -DINCLUDE_DIR=\"$(pkgincludedir)/$(pkg)/include\" -DSRC_INCLUDE_DIR=\"$(abs_top_srcdir)/include\" $(COVERAGE_CXXFLAGS)
+AM_CXXFLAGS = -DINCLUDE_DIR=\"$(pkgincludedir)/$(pkg)/include\" -DSRC_INCLUDE_DIR=\"$(abs_top_srcdir)/include\" $(COVERAGE_CXXFLAGS) -fexceptions
 genmc_SOURCES = src/main.cpp
 genmc_LDADD = libgenmc.a -lpthread $(COVERAGE_LDFLAGS)
 MOSTLYCLEANFILES = DX_CLEANFILES
