--- a/verify_test_benchmarks/scalable-concurrent-containers/Cargo.toml
+++ b/verify_test_benchmarks/scalable-concurrent-containers/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["asynchronous", "caching", "concurrency", "data-structures"]
 keywords = ["async", "cache", "concurrent", "hashmap", "tree"]
 
 [workspace]
-members = [".", "examples"]
+members = ["."]
 
 [dependencies]
 equivalent = { version = "1.0", optional = true }
