restructured use cases and added script to run all

--- a/paper_use_cases/benchmarks/figure6/Cargo.toml
+++ b/paper_use_cases/benchmarks/figure6/Cargo.toml
@@ -1,9 +1,6 @@
 [package]
-name = "racy_test"
+name = "figure6"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-
-[build-dependencies]
-cc = "1.0"
